tests/fixtures/invalid/int_add_dict.py
# Cannot add Int and Dict[str, int]
x: int = 1 + {"a": 1}
